cabal-version:      2.2
name:               blockfrost-client-core
version:            0.4.0.1
synopsis:           blockfrost.io common client definitions / instances
description:        HasClient for our auth
homepage:           https://github.com/blockfrost/blockfrost-haskell
license:            Apache-2.0
license-file:       LICENSE
author:             blockfrost.io
maintainer:         srk@48.io
copyright:          2021 blockfrost.io
category:           Cardano
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

flag BuildFast
  default:     True
  description: Turn off optimizations

flag Production
  default:     False
  manual:      True
  description: Production build

common libstuff
  default-language:    Haskell2010
  default-extensions:
    ImportQualifiedPost
  ghc-options:         -Wall -Wunused-packages -fno-warn-orphans
  if flag(BuildFast)
    ghc-options: -O0

  if flag(production)
    ghc-options: -Werror

library
  import:             libstuff
  hs-source-dirs:     src
  default-extensions: ImportQualifiedPost
  exposed-modules:
    Blockfrost.Client.Auth
    Blockfrost.Client.Core
    Blockfrost.Client.Pagination
    Blockfrost.Client.Sorting
    Blockfrost.Client.Tag
    Blockfrost.Client.UserAgent

  build-depends:
    , aeson
    , base                      >=4.7  && <5
    , blockfrost-api            ^>=0.4
    , bytestring
    , case-insensitive
    , containers
    , data-default
    , http-client
    , http-client-tls
    , http-types
    , servant                   >=0.18 && <0.20
    , servant-client
    , servant-client-core
    , servant-multipart-api
    , servant-multipart-client
    , text

source-repository head
  type:     git
  location: https://github.com/blockfrost/blockfrost-haskell
